index.scss
@use './params.scss';
@use './app.scss';


$black: #1d2230;



$bottom-panel-height: 150px;
$left-panel-width: 340px;
$padding: 8px;

#container {
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

* {
    flex-shrink: 0;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    // outline: 1px solid red;
    position: relative;
    box-sizing: border-box;
    color: $black;
}

body, html {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    background: #f4f4fa;
}

.flex-grow-container{
    height: 0;
    flex-grow: 1;
    padding: 14px; //note: this makes the canvas a little smaller to avoid having any of the cube peek through the modal
}

#canvas {
    height: 100%;
    width: 100%;
}

#panel-left {
    width: $left-panel-width;
    padding: $padding 0 $padding $padding;
    display: flex;
    flex-direction: column;
}

.top-container {
    display: flex;
    width: 0;
    height: 100%;
    position: relative;
    flex-direction: column;
    flex-grow: 1;
}

.black {
    height: params.$side;
    width: params.$side;
    background: $black;
    display: flex;
    align-items: center;
    justify-content: center;
}

.face{
    display: flex;
    width: params.$side * 3;
    flex-wrap: wrap;
    margin: 8px;
    border-radius: 3px;
    overflow: hidden;
    box-shadow: 0 5px 5px 0 rgba(0,0,80, .1);
    &.empty { box-shadow: none; }
}

.decal{
    height: params.$side - 6px;
    width: params.$side - 6px;
    border-radius: 2px;
}

.bottom-panel {
    display: flex; 
    height: $bottom-panel-height; 
    flex-shrink: 0;
    align-items: stretch;
    padding-bottom: $padding;
    padding-right: $padding;

}

.bottom-card {
    width: 0;
    flex-grow: 1;
    display: flex;
    align-items: center;
}

.all-container {
    display: flex; 
    height: 100%; 
    width: 100%;
}

.face-topology {
    display: flex;
    justify-content: center;
    align-items: center;
}

.card {
    padding: 20px;
    background: app.$card-background;
    box-shadow: 0 5px 5px 0 rgba(0,0,80,.05), 
        0 10px 25px 0 rgba(0,0,100,.2),
        inset 0 1px white,
        inset 0 -2px rgba(0,0, 80, .02);
    border-radius: 5px;
    margin: 8px;
}



#history {
    margin-top: 20px;
    border-radius: 3px;
    // border: 1px solid #eee;
    height: 0;
    flex-grow: 1;
    overflow-y: scroll;
}

.history-card {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
}



.history-log {
    height: 40px;
    display: flex;
    align-items: center;
    border-bottom: 1px solid rgba($black, .05);
    border-top: 1px solid rgba($black, .05);
    margin-bottom: -1px;
    box-shadow: inset 0 1px white;
    background: #fafafc;
}



#history-pointer-container {
    top: 0;
    left: 0;
    margin-top: 11px;
    position: absolute;
    transform: translateY(-50%);
    transition: top .5s, opacity .5s;
    z-index: 1;
    width: 100%;
}

#history-list {
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 20px;
    padding-right: 20px;
    height: 100%;
}



.history-pointer {
    height: 20px;
    display: block;
    fill: $black;
}

.divider {
    height: 1px;
    width: calc(100% - 50px);
    border-bottom: 1px solid $black;
    top: -10px;
    margin-left: 30px;
}

#clock {
    font-size: 36px;
    font-weight: 700;
    text-shadow: 0 2px white;
    color: $black;
}

button {
    outline: none;
    background: rgb(255, 0, 119);
    text-shadow: 0 -1px 1px rgba($black, .2);
    color: white;
    border: none;
    border-radius: 5px;
    padding: 6px 8px;
    cursor: pointer;
    box-shadow:inset 0px 4px 2px -2px rgba(white, .5), inset 0 -2px 4px rgba($black, 0.3);

    &:disabled {
        background: #ddd;
        cursor: not-allowed;
        box-shadow: none;
    }
}

.rubiks-svg {
    fill: rgba(0,0,80,.03);
    height: 100%;
    width: 100%;
}

#history-bg {
    height: 100%;
    width: 100%;
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
}


.no-history {
    text-align: center;
    height: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    & *:first-child {
        font-size: 32px;
        font-weight: 800;
        color: $black;
    }
    & *:last-child {
        font-size: 20px;
        font-weight: 200;
        color: $black;
    }
}

#front, #back, #left, #right, #top, #bottom {
    cursor: pointer;
}


.ham-stroke {
    height: 20%; 
    width: 100%; 
    background: $black;
    transition: .3s;
}

.ham-button {
    .hbc {
        height: 100%;
        width: 100%;
        display: flex;
        flex-direction: column;
        justify-content: space-between; 
        position: relative;
    }
    box-shadow: none;
    height: 15px; 
    width: 20px; 
    position: absolute; 
    top: 16px; 
    right: 16px;
    background: none;
    padding: 0;
    &.minimize .ham-stroke {
        &:first-child{
            transform: translateY(6px)rotate(-45deg);
        }
        &:nth-child(2){
            transform: scaleX(0)
        }
        &:last-child{
            transform: translateY(-6px)rotate(45deg);
        }
    }
}


.history-log-content {
    display: flex;
    align-items: center;

    svg {
        height: 20px;
        width: auto;
    }

    .face-name {
        width: 80px;
        span {
            letter-spacing: 1.2;
            font-size: 12px;
            color: $black;
            font-weight: 700;
        }
    }
   
    .turns {
        letter-spacing: 1;
        color: #777;
        font-size: 12px;
        display: inline-flex;
        align-items: center;
        &.cw svg {
            fill: blue;
        }
        &.cc svg {
            fill: red;
            position: relative;
            left: -3px;
        }
    }
    
    &.rotate {
        font-size: 12px;
        color: #999;
        letter-spacing: 1.2;
        width: 100%;
    }
}

